--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							casuals<br />
 							</p>
 							<ul class="actions special">
-								<li><a href="https://www.google.com" class="button primary">Join</a></li>
+								<li><a href="" class="button primary">Join</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
