Added stats page

--- a/gallery.html
+++ b/gallery.html
@@ -28,8 +28,8 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="quotes.html">Quotes</a></li>
-											<li><a href="gallery.html">Gallery</a></li>
-											
+                                            <li><a href="gallery.html">Gallery</a></li>
+                                            <li><a href="statistics.html">Statistics</a></li>
 										</ul>
 									</div>
 								</li>
@@ -54,7 +54,7 @@
 											<div class="col-12"><span class="image fit"><img src="images/botpic.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/arthur2.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/steve9.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/arthur23.JPG" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/arthur23.jpg" alt="" /></span></div>
 											<div class="col-12"><span class="image fit"><img src="images/christmas2020arthur.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/koreanbbq.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/aquarium.jpg" alt="" /></span></div>
