--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="quotes.html">Quotes</a></li>
-											<li><a href="gallery.html">Gallery</a></li>
-											
+                                            <li><a href="gallery.html">Gallery</a></li>
+                                            <li><a href="statistics.html">Statistics</a></li>
 										</ul>
 									</div>
 								</li>
@@ -135,7 +135,7 @@
 						<div class="inner">
 							<header>
 								<h2>Interested in joining?</h2>
-								<p>Well, if you're not part of the crew already then you're not invited. But you can look at the gallery and quotes and wish you were a part of us.</p>
+								<p>Well if you're not part of the crew then you're not invited. But you can look below and wish you were a part of us.</p>
 							</header>
 							<ul class="actions stacked">
 								<li><a href="quotes.html" class="button fit primary">Quotes</a></li>
