Adding bot doc to menu

--- a/bot.html
+++ b/bot.html
@@ -30,6 +30,7 @@
 											<li><a href="quotes.html">Quotes</a></li>
                                             <li><a href="gallery.html">Gallery</a></li>
                                             <li><a href="statistics.html">Statistics</a></li>
+                                            <li><a href="bot.html">Bot Documentation</a></li>
 										</ul>
 									</div>
 								</li>
