centered the quote button

--- a/quotes.html
+++ b/quotes.html
@@ -44,7 +44,7 @@
 							<h2>Quote Generator</h2>
 							<p>No Context</p>
 						</header>
-						<section class="wrapper style5">
+						<section class="wrapper style5 special">
 							<div class="inner">
 								<button class="btn" onclick ="getRandomQuote();" id="btn-1">Generate Quote</button>
 								<div class="inputBox">
