added photos to gallery

--- a/gallery.html
+++ b/gallery.html
@@ -65,6 +65,9 @@
 											<div class="col-4"><span class="image fit"><img src="images/raf.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/polaroid.jpg" alt="" /></span></div>
 											<div class="col-8"><span class="image fit"><img src="images/8th.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/bestboys.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/TonyMugShot.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/bonchonchristian.jpg" alt="" /></span></div>
 										</div>
 									</div>
 								
