added more photos

--- a/gallery.html
+++ b/gallery.html
@@ -68,6 +68,9 @@
 											<div class="col-4"><span class="image fit"><img src="images/bestboys.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/TonyMugShot.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/bonchonchristian.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pfchang.jpg" alt="" /></span></div>
+											<div class="col-8"><span class="image fit"><img src="images/arthurbdaybbq.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/narutoraf.jpg" alt="" /></span></div>
 										</div>
 									</div>
 								
