added raf in deer suit

--- a/gallery.html
+++ b/gallery.html
@@ -70,6 +70,7 @@
 											<div class="col-4"><span class="image fit"><img src="images/bonchonchristian.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pfchang.jpg" alt="" /></span></div>
 											<div class="col-8"><span class="image fit"><img src="images/arthurbdaybbq.jpg" alt="" /></span></div>
+											<div class="col-8"><span class="image fit"><img src="images/rafdeersuit.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/narutoraf.jpg" alt="" /></span></div>
 										</div>
 									</div>
