--- a/quotes.html
+++ b/quotes.html
@@ -65,7 +65,7 @@
 							<li><a href="#" class="icon brands fa-snapchat"><span class="label">Twitter</span></a></li>
 							<li><a href="https://github.com/J4ninja" class="icon brands fa-github"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/j4.nguyen/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-linkedin"><span class="label">Dribbble</span></a></li>
+							<li><a href="https://www.linkedin.com/in/john-nguyen-2b8315191/" class="icon brands fa-linkedin"><span class="label">Dribbble</span></a></li>
 							<li><a href="mailto:j4nguyen134@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
